[package]
name = "wasm3-provider"
version = "0.1.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
]
edition = "2018"

[dependencies]
kube = { version = "0.16.1", features = ["openapi"] }
log = "0.4"
failure = "0.1"
wasm3 = { git = "https://github.com/Veykril/wasm3-rs.git", features = ["wasi"] }
tempfile = "3.1"
serde = "1.0"
serde_json = "1.0"
kubelet = { path = "../kubelet", version = "0.1.0" }
wat = "1.0"
tokio = { version = "0.2.11", features = ["full"] }

[dev-dependencies]
k8s-openapi = { version = "0.5.1", features = ["v1_15"] }
