[package]
name = "wascc-provider"
version = "0.1.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
kube = "0.33"
log = "0.4"
wasm3 = { git = "https://github.com/Veykril/wasm3-rs.git" }
tempfile = "3.1"
kubelet = { path = "../kubelet", version = "0.1.0" }
wat = "1.0"
tokio = { version = "0.2", features = ["fs", "stream", "macros", "io-util", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
k8s-openapi = { version = "0.7", features = ["v1_17"] }

[dev-dependencies]
oci-distribution = { path = "../oci-distribution", version = "0.1.0" }

