[package]
name = "mio-uds-windows"
version = "0.1.0"
license = "MIT"
authors = ["Azure IoT Edge Devs"]
description = "Unix Domain Sockets for mio...on Windows!"
repository = "https://github.com/Azure/mio-uds-windows"
# readme = "README"
# keywords = ""
# categories = ""
exclude = [".gitignore"]

[dependencies]
iovec = "0.1.2"
lazycell = "1"
log = "0.4.5"
mio = "0.6"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
miow = "0.2.1"
winapi = "0.2.8"
ws2_32-sys = "0.2.1"

[dev-dependencies]
bytes = "0.3"
env_logger = { version = "0.4", default-features = false }
slab = "0.4"
tempdir = "0.3"
version-sync = "0.5"

[[test]]
name = "test"
path = "test/mod.rs"
